侧滑栏和标题栏适配

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/list/gifmain",
     "pages/list/videomain",
     "pages/list/welfare",
+    "pages/list/result",
     "pages/index/index",
     "pages/logs/logs"
   ],
