--- a/app.json
+++ b/app.json
@@ -4,8 +4,10 @@
     "pages/html/about",
     "pages/detail/ztdetail",
     "pages/detail/gifdetail",
+    "pages/detail/dzdetail",
     "pages/detail/videodetail",
     "pages/list/ztmain",
+    "pages/list/dzmain",
     "pages/list/gifmain",
     "pages/list/videomain",
     "pages/list/welfare",
