--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,6 @@
 {
 	"description": "项目配置文件",
+	"cloudfunctionRoot": "cfuncs/",
 	"packOptions": {
 		"ignore": []
 	},
@@ -11,7 +12,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.2.2",
+	"libVersion": "2.2.3",
 	"appid": "wx07c31bf23d3bd373",
 	"projectname": "%E8%BD%BB%E6%9D%BE%E4%B8%80%E4%B8%8Bsoft",
 	"debugOptions": {
