--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,6 @@
 {
 	"description": "项目配置文件",
-	"cloudfunctionRoot": "cfuncs/",
+	"cloudfunctionRoot": "cfuncs/*",
 	"packOptions": {
 		"ignore": []
 	},
